--- a/lift.css
+++ b/lift.css
@@ -1,12 +1,19 @@
-.ui-grid-a .ui-block-a, .ui-grid-a .ui-block-b {
-	width: 38%;
-	margin: .5em 5%;
-}
+.portrait .ui-grid-b .ui-block-a, .portrait .ui-grid-b .ui-block-b { width: 32%; margin: 0 5%; }
+.portrait .ui-grid-b .ui-block-c { width: 8%; margin: 0 2%; }
+.landscape .ui-grid-b .ui-block-a, .landscape .ui-grid-b .ui-block-b { width: 30%; margin: 0 5%; }
+.landscape .ui-grid-b .ui-block-c { width: 10%; margin: 0 8% 0 2%; }
 
-h4 {
-	text-align: center;
-	margin: .4em 0;
-}
+.portrait .ui-grid-b input { width: 100%; height: 20px; margin: 3px 0;}
+.portrait .ui-grid-b .ui-block-c a { height: 20px; margin: 4px 0 7px 20%; }
+.landscape .ui-grid-b input { width: 100%; height: 20px; margin: 1px 0;}
+.landscape .ui-grid-b .ui-block-c a { height: 20px; margin: 6px 50% 4px 0; }
+
+.portrait .ui-grid-b .ui-block-c a.first-button { margin-top: 73px }
+.landscape .ui-grid-b .ui-block-c a.first-button { margin-top: 73px }
+
+.invis { visibility: hidden; }
+
+h4 { text-align: center; margin: .4em 0; }
 
 .min-width-480px input.ui-input-text, .min-width-480px textarea.ui-input-text, .min-width-480px .ui-input-search {
 	width: 100%;
@@ -14,3 +21,11 @@ h4 {
 
 .ui-icon-play { background-image: url(images/play.png); }
 .ui-icon-pause { background-image: url(images/pause.png); }
+
+h1.timer { 
+	margin: 0 auto;
+	font-size: 4em;
+	font-family:"arial", sans-serif;
+	font-weight: bolder;
+	text-align: center;
+}
